@@ -1,3 +1,8 @@
+2004-02-23  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* BigInteger.cs: Corrected isProbablePrime by removing the redundant 
+	loop. Fix #54750.
+
 2004-02-13  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* BigInteger.cs: Fixed isProbablePrime() and added Parse method from
